Spring/Error/HelloWorld/src/main/java/com/example/demo/web/exception/MyException.java
package com.example.demo.web.exception;

/**
 * @author: mengchen
 * Create by 18-4-15
 */
public class MyException extends Exception {

    public MyException(String message) {
        super(message);
    }
}
